# BirdStory

./: Cargo.toml  old.rs
src/: files.rs  lib.rs  main.rs  palette.rs  search.rs
src/biblio/: author.rs  book.rs  mod.rs  narrator.rs  person.rs  series.rs
src/gui/: book_entry.rs  mod.rs  popout.rs
src/gui/info_view/: cover_art.rs  mod.rs
src/gui/selection_view/: mod.rs  search_bar.rs  selections_view.rs
